--- a/public/web/css/style.css
+++ b/public/web/css/style.css
@@ -1,106 +1,22 @@
-@media (max-width: 1919px) {
-  .container {
-    margin-left: 0 !important;
-    margin-right: 0 !important;
-    max-width: 100% !important;;
-  }
+.bg-title {
+	background-repeat: no-repeat;
+	background-size: cover;
 }
 
-@media (min-width: 1920px) {
-  .container {
-    max-width: 60% !important;;
-  }
+.overlay-white {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: rgba(255, 255, 255, .3);
 }
 
-.bg-light-grey {
-  background-color: #f7f7f7;
-}
-
-.btn.btn-facebook {
-  background: #3b5998;
-  border: 1px solid #3b5998;
-}
-
-.btn.btn-facebook:hover {
-  background: #3a73b6;
-  border: 1px solid #3a73b6;
-}
-
-#modal-login .modal-dialog, #modal-register .modal-dialog {
-  max-width: 390px;
-}
-
-#modal-login .close, #modal-register .close {
-  opacity: 1;
-  position: absolute;
-  right: -30px;
-  color: #fff;
-}
-
-.line-top {
-  margin: 1em auto 1.2em;
-}
-
-.line {
-  text-align: center;
-  width: 320px;
-}
-
-.sub {
-  font-size: 1rem;
-  color: #A9B1B7;
-  margin: 0 auto;
-  z-index: 3;
-  position: relative;
-  background: #fff;
-  padding: 0 .8em;
-  line-height: 1;
-}
-
-.line.line-top hr {
-  margin: -15px 0 8px 0;
-  z-index: 2;
-  position: relative;
-  border: 0;
-  border-top: 1px solid #E8E8E8;
-  border-bottom: 1px solid #FAFAFA;
-}
-
-.btn.btn-primary, .btn.btn-primary:hover, .btn.btn-primary:active, .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
-  background: #6d8dc4;
-  border: 1px solid #6d8dc4;
-  color: #fff;
-}
-
-.btn-outline-primary {
-  background: transparent;
-  border: 1px solid #d20404;
-  color: #d20404;
-}
-
-.btn-outline-primary:hover {
-  background: #d20404;
-  border: 1px solid #d20404;
-}
-
-.btn.btn-white:hover {
-  background: #d20404;
-  border: 1px solid #d20404;
-}
-
-img.zoom, .overflow-hidden:hover img.zoom {
-  overflow: hidden;
-  -webkit-transition: all .9s ease;
-  -moz-transition: all .9s ease;
-  -o-transition: all .9s ease;
-  -ms-transition: all .9s ease;
-  transition: all .9s ease;
-}
-
-img.zoom:hover, .overflow-hidden:hover img.zoom {
-  -webkit-transform: scale(1.25);
-  -moz-transform: scale(1.25);
-  -o-transform: scale(1.25);
-  -ms-transform: scale(1.25);
-  transform: scale(1.25);
+.overlay-dark {
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, .3);
 }
